@@ -1,4 +1,4 @@
-/*	$OpenBSD: includes.h,v 1.29 2006/02/08 14:38:18 stevesk Exp $	*/
+/*	$OpenBSD: includes.h,v 1.30 2006/02/08 23:51:24 stevesk Exp $	*/
 
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
@@ -35,7 +35,6 @@ static /**/const char *const rcsid[] = { (const char *)rcsid, "\100(#)" msg }
 #include <pwd.h>
 #include <grp.h>
 #include <time.h>
-#include <dirent.h>
 #include <stddef.h>
 
 #ifdef HAVE_LIMITS_H
