@@ -47,6 +47,9 @@
      [includes.h packet.c]
      move #include <netinet/in_systm.h> and <netinet/ip.h> out of
      includes.h; ok markus@
+   - stevesk@cvs.openbsd.org 2006/02/08 23:51:24
+     [includes.h scp.c sftp-glob.c sftp-server.c]
+     move #include <dirent.h> out of includes.h; ok markus@
 
 20060313
  - (dtucker) [configure.ac] Bug #1171: Don't use printf("%lld", longlong)
@@ -3948,4 +3951,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4153 2006/03/15 00:24:12 djm Exp $
+$Id: ChangeLog,v 1.4154 2006/03/15 00:25:13 djm Exp $
